--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "omicsio",
+  "name": "@sciexp/data",
   "version": "0.0.0-development",
   "private": true,
   "description": "Scientific data platform for omics I/O, lakehouse orchestration, and data mesh patterns",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sciexp/omicsio.git"
+    "url": "https://github.com/sciexp/data.git"
   },
   "license": "MIT",
   "engines": {
