--- a/packages/omicsio/package.json
+++ b/packages/omicsio/package.json
@@ -82,7 +82,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sciexp/omicsio.git"
+    "url": "https://github.com/sciexp/data.git"
   },
   "scripts": {
     "test-release": "semantic-release --dry-run --no-ci"
